fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1612,6 +1612,10 @@ img {
     width: 100%;
     padding: 0 0 20px;
   }
+  .projects {
+    padding: 2.0em 0;
+  }
+}
 .mobile_carousel {
   height: auto !important;
   max-width: 100% !important;
